# tec_prog_c-_game

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main.cpp
include/: Ente.hpp  Entidade.hpp  Fase.hpp  Gerenciador_Entradas.hpp  Gerenciador_Grafico.hpp  Gerenciador_Logs.hpp  Jao_Zika_Jogo.hpp  Jogador.hpp  Jogo.h  Obstaculo.hpp  Personagem.hpp  jogo.h
include/Entes/: Entidade.hpp  Fase.hpp  Menu.hpp
include/Entes/Entidades/: Jogador.hpp  Obstaculo.hpp  Personagem.hpp
include/Entes/Entidades/Obstaculos/: Plataforma.hpp
include/Entes/Entidades/Personagens/: Jao_Zika_Jogador.hpp
include/Entes/Fases/: DepartamentoE.hpp  Fase.hpp  TorreE.hpp
include/Entidades/: Obstaculo.hpp  Personagem.hpp
include/Fases/: Fase.hpp
include/Gerenciadores/: .Gerenciador_Colisao.hpp.swp  Atribuidor_Figuras.cpp  Atribuidor_Figuras.hpp  Gerenciador_Colisao.hpp  Gerenciador_Entradas.hpp  Gerenciador_Grafico.hpp  Gerenciador_Logs.hpp
include/Listas/: Lista.hpp  ListaEntidades.hpp
src/: Ente.cpp  Gerenciador_Entradas.cpp  Jao_Zika_Jogo.cpp  Jogador.cpp  Jogo.cpp  Personagem.cpp  jogo.cpp  jogo.h
src/Entes/: Entidade.cpp
src/Entes/Entidades/: Personagem.cpp
src/Entes/Entidades/Personagens/: Jao_Zika_Jogador.cpp
src/Entidades/: Entidade.cpp  Jogador.cpp
src/Gerenciadores/: Atribuidor_Figuras.cpp  Gerenciador_Entradas.cpp  Gerenciador_Grafico.cpp
